Fixing the distorting issue

--- a/style.css
+++ b/style.css
@@ -66,7 +66,8 @@ img {
   display: block;
   mix-blend-mode: soft-light;
   height: 100%;
-  object-fit: fill;
+  object-fit: cover;
+  object-position: right center;
 }
 
 .card__content {
@@ -111,14 +112,10 @@ img {
   font-size: 1.2rem;
 }
 
-@media (min-width: 800px) {
-  html {
-    font-size: 50%;
-  }
-
+@media (min-width: 900px) {
   .card {
-    display: flex;
-    height: 450px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
   }
 
   .card .card__img-wrapper {
@@ -126,7 +123,6 @@ img {
   }
 
   .card__content {
-    padding: 3rem 5rem;
     text-align: left;
   }
 
@@ -137,13 +133,11 @@ img {
 
   .card__text {
     font-size: 1.6rem;
-    width: 75%;
   }
 
   .card__stats {
     margin-top: 5rem;
     flex-direction: row;
-    gap: 10rem;
   }
 
   .card__stat p:first-of-type {
